.operator-builder/platform.addons.nukleros.io/secrets-component/openbao/manifests/deployment.yaml
---
# +operator-builder:resource:field=openbao.injector.include,value=true,include
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openbao-agent-injector
  namespace: nukleros-secrets-system # +operator-builder:field:name=namespace,default="nukleros-secrets-system",type=string
  labels:
    app.kubernetes.io/name: openbao-agent-injector
    app.kubernetes.io/instance: openbao
    component: webhook
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: openbao
spec:
  # +operator-builder:field:name=openbao.injector.replicas,default="2",type=int,description=`
  # Number of replicas to use for the OpenBao Agent Injector deployment.`
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: openbao-agent-injector
      app.kubernetes.io/instance: openbao
      component: webhook
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openbao-agent-injector
        app.kubernetes.io/instance: openbao
        component: webhook
        platform.nukleros.io/category: secrets
        platform.nukleros.io/project: openbao
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: openbao
                    app.kubernetes.io/name: openbao-agent-injector
                    component: webhook
                topologyKey: kubernetes.io/hostname
              weight: 100
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: openbao-agent-injector
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsGroup: 1000
        runAsUser: 100
        fsGroup: 1000
      hostNetwork: false
      containers:
        - name: sidecar-injector
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 256Mi
          # +operator-builder:field:name=openbao.injector.image,default=docker.io/hashicorp/vault-k8s,type=string,replace="imageInjector",description=`
          # Image repo and name to use for the OpenBao Agent Injector sidecar.`
          # +operator-builder:field:name=openbao.injector.imageVersion,default="1.7.2",type=string,replace="imageVersionInjector",description=`
          # Version of the OpenBao Agent Injector sidecar image to use.`
          image: imageInjector:imageVersionInjector
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          args:
            - agent-inject
            - 2>&1
          livenessProbe:
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTPS
            failureThreshold: 2
            initialDelaySeconds: 5
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTPS
            failureThreshold: 2
            initialDelaySeconds: 5
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTPS
            failureThreshold: 12
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
