.operator-builder/platform.addons.nukleros.io/secrets-component/openbao/manifests/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openbao
  namespace: nukleros-secrets-system # +operator-builder:field:name=namespace,default="nukleros-secrets-system",type=string
  labels:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: openbao
spec:
  serviceName: openbao-internal
  podManagementPolicy: OrderedReady
  # +operator-builder:field:name=openbao.replicas,default="3",type=int,description=`
  # Number of replicas to use for the OpenBao server statefulset.`
  replicas: 3
  updateStrategy:
    type: OnDelete
  selector:
    matchLabels:
      app.kubernetes.io/name: openbao
      app.kubernetes.io/instance: openbao
      component: server
  template:
    metadata:
      labels:
        helm.sh/chart: openbao-0.29.2
        app.kubernetes.io/name: openbao
        app.kubernetes.io/instance: openbao
        component: server
        platform.nukleros.io/category: secrets
        platform.nukleros.io/project: openbao
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: openbao
                    app.kubernetes.io/name: openbao
                    component: server
                topologyKey: kubernetes.io/hostname
              weight: 100
      nodeSelector:
        kubernetes.io/os: linux
      terminationGracePeriodSeconds: 10
      serviceAccountName: openbao
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsGroup: 1000
        runAsUser: 100
        fsGroup: 1000
      hostNetwork: false
      volumes:
        - name: config
          configMap:
            name: openbao-config
        - name: userconfig-openbao-unseal-key
          secret:
            secretName: openbao-unseal-key
            defaultMode: 256
        - name: home
          emptyDir: {}
      containers:
        - name: openbao
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 256Mi
          # +operator-builder:field:name=openbao.image,default=quay.io/openbao/openbao,type=string,replace="openbaoImage",description=`
          # Image repo and name to use for OpenBao.`
          # +operator-builder:field:name=openbao.version,default="2.6.2",type=string,replace="openbaoVersion",description=`
          # Version of OpenBao to use.`
          image: openbaoImage:openbaoVersion
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -ec
          args:
            - "cp /openbao/config/extraconfig-from-values.hcl /tmp/storageconfig.hcl;\n[ -n \"${HOST_IP}\" ] && sed -Ei \"s|HOST_IP|${HOST_IP?}|g\" /tmp/storageconfig.hcl;\n[ -n \"${POD_IP}\" ] && sed -Ei \"s|POD_IP|${POD_IP?}|g\" /tmp/storageconfig.hcl;\n[ -n \"${HOSTNAME}\" ] && sed -Ei \"s|HOSTNAME|${HOSTNAME?}|g\" /tmp/storageconfig.hcl;\n[ -n \"${API_ADDR}\" ] && sed -Ei \"s|API_ADDR|${API_ADDR?}|g\" /tmp/storageconfig.hcl;\n[ -n \"${TRANSIT_ADDR}\" ] && sed -Ei \"s|TRANSIT_ADDR|${TRANSIT_A [...]
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: audit
              mountPath: /openbao/audit
            - name: data
              mountPath: /openbao/data
            - name: config
              mountPath: /openbao/config
            - name: userconfig-openbao-unseal-key
              readOnly: true
              mountPath: /openbao/userconfig/openbao-unseal-key
            - name: home
              mountPath: /home/openbao
          ports:
            - containerPort: 8200
              name: http
            - containerPort: 8201
              name: https-internal
            - containerPort: 8202
              name: http-rep
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -ec
                - bao status -tls-skip-verify
            failureThreshold: 2
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - sleep 5 && kill -SIGTERM $(pidof bao)
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            # +operator-builder:field:name=openbao.storage.data.size,default="10Gi",type=string,description=`
            # Size of the PVC used for OpenBao's raft data storage.`
            storage: 10Gi
        # +operator-builder:field:name=openbao.storage.data.class,default="",type=string,description=`
        # StorageClass to use for OpenBao's raft data volume.  Leave empty to
        # use the cluster's default StorageClass.`
        storageClassName: ""
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: audit
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            # +operator-builder:field:name=openbao.storage.audit.size,default="10Gi",type=string,description=`
            # Size of the PVC used for OpenBao's audit log storage.`
            storage: 10Gi
        # +operator-builder:field:name=openbao.storage.audit.class,default="",type=string,description=`
        # StorageClass to use for OpenBao's audit log volume.  Leave empty to
        # use the cluster's default StorageClass.`
        storageClassName: ""
