.operator-builder/platform.addons.nukleros.io/secrets-component/openbao/manifests/service.yaml
---
# +operator-builder:resource:field=openbao.injector.include,value=true,include
apiVersion: v1
kind: Service
metadata:
  name: openbao-agent-injector-svc
  namespace: nukleros-secrets-system # +operator-builder:field:name=namespace,default="nukleros-secrets-system",type=string
  labels:
    app.kubernetes.io/name: openbao-agent-injector
    app.kubernetes.io/instance: openbao
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: openbao
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8080
  selector:
    app.kubernetes.io/name: openbao-agent-injector
    app.kubernetes.io/instance: openbao
    component: webhook
---
apiVersion: v1
kind: Service
metadata:
  name: openbao-active
  namespace: nukleros-secrets-system # +operator-builder:field:name=namespace,default="nukleros-secrets-system",type=string
  labels:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    openbao-active: "true"
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: openbao
spec:
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      appProtocol: HTTP
    - name: https-internal
      port: 8201
      targetPort: 8201
  selector:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    component: server
    openbao-active: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: openbao-standby
  namespace: nukleros-secrets-system # +operator-builder:field:name=namespace,default="nukleros-secrets-system",type=string
  labels:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: openbao
spec:
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      appProtocol: HTTP
    - name: https-internal
      port: 8201
      targetPort: 8201
  selector:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    component: server
    openbao-active: "false"
---
apiVersion: v1
kind: Service
metadata:
  name: openbao-internal
  namespace: nukleros-secrets-system # +operator-builder:field:name=namespace,default="nukleros-secrets-system",type=string
  labels:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    openbao-internal: "true"
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: openbao
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      appProtocol: HTTP
    - name: https-internal
      port: 8201
      targetPort: 8201
  selector:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    component: server
---
apiVersion: v1
kind: Service
metadata:
  name: openbao
  namespace: nukleros-secrets-system # +operator-builder:field:name=namespace,default="nukleros-secrets-system",type=string
  labels:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: openbao
spec:
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      appProtocol: HTTP
    - name: https-internal
      port: 8201
      targetPort: 8201
  selector:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    component: server
---
apiVersion: v1
kind: Service
metadata:
  name: openbao-ui
  namespace: nukleros-secrets-system # +operator-builder:field:name=namespace,default="nukleros-secrets-system",type=string
  labels:
    app.kubernetes.io/name: openbao-ui
    app.kubernetes.io/instance: openbao
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: openbao
spec:
  selector:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    component: server
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 8200
      targetPort: 8200
  type: ClusterIP
