.operator-builder/platform.addons.nukleros.io/secrets-component/openbao/manifests/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openbao
  labels:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: openbao
  namespace: nukleros-secrets-system # +operator-builder:field:name=namespace,default="nukleros-secrets-system",type=string
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: openbao
      app.kubernetes.io/instance: openbao
  ingress:
    - ports:
        - port: 8200
          protocol: TCP
        - port: 8201
          protocol: TCP
  egress:
    - {}
