.operator-builder/platform.addons.nukleros.io/secrets-component/openbao/manifests/webhook.yaml
---
# +operator-builder:resource:field=openbao.injector.include,value=true,include
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: openbao-agent-injector-cfg
  labels:
    app.kubernetes.io/name: openbao-agent-injector
    app.kubernetes.io/instance: openbao
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: openbao
webhooks:
  - name: vault.hashicorp.com
    failurePolicy: Ignore
    matchPolicy: Exact
    sideEffects: None
    timeoutSeconds: 30
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: openbao-agent-injector-svc
        namespace: nukleros-secrets-system
        path: /mutate
      caBundle: ""
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - ""
        apiVersions:
          - v1
        resources:
          - pods
    objectSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - openbao-agent-injector
